chore: 统一 Vue 3 编译器依赖到 catalog，确保 weapp-tailwindcss 的构建环境与仓库其他包保持一致。

--- a/apps/vue-app/package.json
+++ b/apps/vue-app/package.json
@@ -14,7 +14,7 @@
     "lucide-vue-next": "catalog:lucideVueNext0555",
     "reka-ui": "^2.6.0",
     "tailwind-merge": "^3.4.0",
-    "vue": "^3.5.24"
+    "vue": "catalog:vue3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "catalog:tailwindcss4",
