--- a/demo/taro-vue3-app/package.json
+++ b/demo/taro-vue3-app/package.json
@@ -61,7 +61,7 @@
     "@tarojs/runtime": "catalog:taro4",
     "@tarojs/shared": "catalog:taro4",
     "@tarojs/taro": "catalog:taro4",
-    "vue": "^3.5.24"
+    "vue": "catalog:vue3"
   },
   "devDependencies": {
     "@babel/core": "catalog:babelCore7285",
@@ -73,7 +73,7 @@
     "@typescript-eslint/eslint-plugin": "^8.48.0",
     "@typescript-eslint/parser": "^8.48.0",
     "@vue/babel-plugin-jsx": "^2.0.1",
-    "@vue/compiler-sfc": "^3.5.24",
+    "@vue/compiler-sfc": "catalog:vue3",
     "@weapp-tailwindcss/merge": "catalog:weappMerge",
     "autoprefixer": "catalog:autoprefixer10",
     "babel-preset-taro": "4.1.8",
