--- a/demo/uni-app-tailwindcss-v4/package.json
+++ b/demo/uni-app-tailwindcss-v4/package.json
@@ -61,7 +61,7 @@
     "@dcloudio/uni-mp-xhs": "3.0.0-4080520251106001",
     "@dcloudio/uni-quickapp-webview": "3.0.0-4080520251106001",
     "tailwindcss-core-plugins-extractor": "^0.2.0",
-    "vue": "3.4.21",
+    "vue": "catalog:vue3",
     "vue-i18n": "^9.14.5"
   },
   "devDependencies": {
