--- a/how-to-build-components-by-tailwindcss/vue-lib/package.json
+++ b/how-to-build-components-by-tailwindcss/vue-lib/package.json
@@ -38,7 +38,7 @@
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "vite-plugin-dts": "^3.6.0",
-    "vue": "^3.3.4",
+    "vue": "catalog:vue3",
     "vue-tsc": "^1.8.5"
   },
   "bugs": {
