--- a/packages/weapp-tailwindcss/package.json
+++ b/packages/weapp-tailwindcss/package.json
@@ -190,8 +190,8 @@
     "@babel/traverse": "~7.28.5",
     "@babel/types": "~7.28.5",
     "@tailwindcss-mangle/config": "^6.1.0",
-    "@vue/compiler-dom": "^3.5.24",
-    "@vue/compiler-sfc": "^3.5.24",
+    "@vue/compiler-dom": "catalog:vue3",
+    "@vue/compiler-sfc": "catalog:vue3",
     "@weapp-core/escape": "~5.0.1",
     "@weapp-core/regex": "~1.0.1",
     "@weapp-tailwindcss/logger": "workspace:*",
