chore: update:templates:deps

--- a/package.json
+++ b/package.json
@@ -67,9 +67,9 @@
     "demo:install:alpha": "tsx scripts/demo/install.ts --alpha",
     "sync": "cnpm sync weapp-tailwindcss-webpack-plugin weapp-tailwindcss weapp-tw @weapp-tailwindcss/cli @weapp-tailwindcss/typography",
     "sync:all": "turbo run sync",
-    "sync:templates": "tsx scripts/sync-templates.ts",
-    "push:templates": "tsx scripts/push-templates.ts",
-    "update:templates:deps": "tsx scripts/sync-template-deps.ts",
+    "templates:sync": "tsx scripts/sync-templates.ts",
+    "templates:push": "tsx scripts/push-templates.ts",
+    "templates:update-deps": "tsx scripts/sync-template-deps.ts",
     "generate:readme": "tsx scripts/readme/write.ts",
     "format": "prettier --check \"src/**/*.{ts,js}\" -w",
     "format:test": "prettier --check \"test/**/*.test.{ts,js}\" -w",
