--- a/demo/taro-app/package.json
+++ b/demo/taro-app/package.json
@@ -67,11 +67,11 @@
     "@weapp-tailwindcss/merge": "catalog:weappMerge",
     "autoprefixer": "catalog:autoprefixer10",
     "babel-plugin-import": "^1.13.8",
-    "babel-preset-taro": "4.1.8",
+    "babel-preset-taro": "catalog:taro4",
     "create-functional-loader": "^0.1.4",
     "cross-env": "catalog:crossEnv",
     "eslint": "^9.39.1",
-    "eslint-config-taro": "4.1.8",
+    "eslint-config-taro": "catalog:taro4",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
@@ -79,7 +79,7 @@
     "postcss": "catalog:postcss85",
     "postcss-rem-to-responsive-pixel": "catalog:postcssRem610",
     "postcss-rpx-transform": "catalog:postcssRpx",
-    "stylelint": "16.26.0",
+    "stylelint": "16.26.1",
     "tailwindcss": "catalog:tailwindcss3",
     "tailwindcss-patch": "catalog:tailwindcssPatch",
     "tailwindcss-rem2px-preset": "catalog:tailwindcssRem",
