--- a/demo/taro-vite-tailwindcss-v4/package.json
+++ b/demo/taro-vite-tailwindcss-v4/package.json
@@ -76,9 +76,9 @@
     "@types/react": "^19.1.13",
     "@vitejs/plugin-react": "^5.1.1",
     "@weapp-tailwindcss/merge": "catalog:weappMerge",
-    "babel-preset-taro": "4.1.8",
+    "babel-preset-taro": "catalog:taro4",
     "eslint": "^9.39.1",
-    "eslint-config-taro": "4.1.8",
+    "eslint-config-taro": "catalog:taro4",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
     "postcss": "catalog:postcss85",
