--- a/demo/taro-vue3-app/package.json
+++ b/demo/taro-vue3-app/package.json
@@ -76,16 +76,16 @@
     "@vue/compiler-sfc": "catalog:vue3",
     "@weapp-tailwindcss/merge": "catalog:weappMerge",
     "autoprefixer": "catalog:autoprefixer10",
-    "babel-preset-taro": "4.1.8",
+    "babel-preset-taro": "catalog:taro4",
     "cross-env": "catalog:crossEnv",
     "eslint": "^9.39.1",
-    "eslint-config-taro": "4.1.8",
-    "eslint-plugin-vue": "^10.6.1",
+    "eslint-config-taro": "catalog:taro4",
+    "eslint-plugin-vue": "^10.6.2",
     "less": "^4.4.1",
     "postcss": "catalog:postcss85",
     "postcss-rem-to-responsive-pixel": "catalog:postcssRem610",
     "postcss-rpx-transform": "catalog:postcssRpx",
-    "stylelint": "16.26.0",
+    "stylelint": "16.26.1",
     "tailwindcss": "catalog:tailwindcss3",
     "tailwindcss-patch": "catalog:tailwindcssPatch",
     "tailwindcss-rem2px-preset": "catalog:tailwindcssRem",
