--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -39,7 +39,7 @@ catalogs:
   postcssRpx:
     postcss-rpx-transform: ^1.0.1
   prettier371:
-    prettier: ^3.7.1
+    prettier: ^3.7.3
   react18:
     '@types/react': 18.2.15
     '@types/react-dom': 18.2.7
@@ -53,7 +53,7 @@ catalogs:
   reactRefresh018:
     react-refresh: ^0.18.0
   stylelint1625:
-    stylelint: ^16.26.0
+    stylelint: ^16.26.1
   tailwindMerge:
     tailwind-merge: ^3.4.0
   tailwindcss3:
@@ -68,29 +68,31 @@ catalogs:
   tailwindcssRem:
     tailwindcss-rem2px-preset: ^1.0.3
   taro4:
-    '@tarojs/cli': ^4.1.8
-    '@tarojs/components': ^4.1.8
-    '@tarojs/helper': ^4.1.8
-    '@tarojs/plugin-framework-react': ^4.1.8
-    '@tarojs/plugin-framework-vue3': ^4.1.8
-    '@tarojs/plugin-html': ^4.1.8
-    '@tarojs/plugin-platform-alipay': ^4.1.8
-    '@tarojs/plugin-platform-h5': ^4.1.8
-    '@tarojs/plugin-platform-harmony-hybrid': ^4.1.8
-    '@tarojs/plugin-platform-jd': ^4.1.8
-    '@tarojs/plugin-platform-qq': ^4.1.8
-    '@tarojs/plugin-platform-swan': ^4.1.8
-    '@tarojs/plugin-platform-tt': ^4.1.8
-    '@tarojs/plugin-platform-weapp': ^4.1.8
-    '@tarojs/react': ^4.1.8
-    '@tarojs/runtime': ^4.1.8
-    '@tarojs/shared': ^4.1.8
-    '@tarojs/taro': ^4.1.8
-    '@tarojs/taro-loader': ^4.1.8
-    '@tarojs/vite-runner': ^4.1.8
-    '@tarojs/webpack5-runner': ^4.1.8
+    '@tarojs/cli': ^4.1.9
+    '@tarojs/components': ^4.1.9
+    '@tarojs/helper': ^4.1.9
+    '@tarojs/plugin-framework-react': ^4.1.9
+    '@tarojs/plugin-framework-vue3': ^4.1.9
+    '@tarojs/plugin-html': ^4.1.9
+    '@tarojs/plugin-platform-alipay': ^4.1.9
+    '@tarojs/plugin-platform-h5': ^4.1.9
+    '@tarojs/plugin-platform-harmony-hybrid': ^4.1.9
+    '@tarojs/plugin-platform-jd': ^4.1.9
+    '@tarojs/plugin-platform-qq': ^4.1.9
+    '@tarojs/plugin-platform-swan': ^4.1.9
+    '@tarojs/plugin-platform-tt': ^4.1.9
+    '@tarojs/plugin-platform-weapp': ^4.1.9
+    '@tarojs/react': ^4.1.9
+    '@tarojs/runtime': ^4.1.9
+    '@tarojs/shared': ^4.1.9
+    '@tarojs/taro': ^4.1.9
+    '@tarojs/taro-loader': ^4.1.9
+    '@tarojs/vite-runner': ^4.1.9
+    '@tarojs/webpack5-runner': ^4.1.9
+    babel-preset-taro: ^4.1.9
+    eslint-config-taro: ^4.1.9
   taroPxtransform:
-    postcss-pxtransform: ^4.1.8
+    postcss-pxtransform: ^4.1.9
   typescript59:
     typescript: ^5.9.3
   typescript59tilde:
