--- a/templates/taro-react-tailwind-vscode-template/package.json
+++ b/templates/taro-react-tailwind-vscode-template/package.json
@@ -55,7 +55,7 @@
     "clsx": "^2.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "@weapp-tailwindcss/merge": "^2.1.2"
+    "@weapp-tailwindcss/merge-v3": "^0.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.28.3",
@@ -83,12 +83,12 @@
     "tsconfig-paths-webpack-plugin": "^4.2.0",
     "typescript": "^5.9.3",
     "weapp-ide-cli": "^4.1.0",
-    "weapp-tailwindcss": "^4.8.6",
+    "weapp-tailwindcss": "^4.8.8",
     "webpack": "5.101.2"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
-      "@weapp-tailwindcss/merge"
+      "@weapp-tailwindcss/merge-v3"
     ]
   }
 }
