--- a/templates/taro-vue3-tailwind-vscode-template/package.json
+++ b/templates/taro-vue3-tailwind-vscode-template/package.json
@@ -55,7 +55,7 @@
     "@tarojs/shared": "4.0.5",
     "@tarojs/taro": "4.0.5",
     "vue": "^3.5.6",
-    "@weapp-tailwindcss/merge": "^2.1.2"
+    "@weapp-tailwindcss/merge-v3": "^0.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
@@ -82,11 +82,11 @@
     "unplugin-vue-components": "^0.27.4",
     "vite": "^5.4.5",
     "weapp-ide-cli": "^4.1.0",
-    "weapp-tailwindcss": "^4.8.6"
+    "weapp-tailwindcss": "^4.8.8"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
-      "@weapp-tailwindcss/merge"
+      "@weapp-tailwindcss/merge-v3"
     ]
   }
 }
