--- a/templates/uni-app-vite-vue3-tailwind-vscode-template/package.json
+++ b/templates/uni-app-vite-vue3-tailwind-vscode-template/package.json
@@ -62,10 +62,10 @@
     "@dcloudio/uni-mp-xhs": "3.0.0-4080520251106001",
     "@dcloudio/uni-quickapp-webview": "3.0.0-4080520251106001",
     "@vue/shared": "3.4.21",
-    "@weapp-tailwindcss/merge": "^2.1.2",
     "pinia": "2.2.4",
     "vue": "^3.4.21",
-    "vue-i18n": "^9.1.9"
+    "vue-i18n": "^9.1.9",
+    "@weapp-tailwindcss/merge-v3": "^0.1.2"
   },
   "devDependencies": {
     "@dcloudio/types": "^3.4.8",
@@ -89,13 +89,13 @@
     "unplugin-auto-import": "^20.2.0",
     "vite": "5.2.8",
     "weapp-ide-cli": "^4.1.0",
-    "weapp-tailwindcss": "^4.8.6"
+    "weapp-tailwindcss": "^4.8.8"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
       "vue-demi",
       "weapp-tailwindcss",
-      "@weapp-tailwindcss/merge"
+      "@weapp-tailwindcss/merge-v3"
     ]
   }
 }
