--- a/templates/uni-app-vue3-tailwind-hbuilder-template/package.json
+++ b/templates/uni-app-vue3-tailwind-hbuilder-template/package.json
@@ -23,9 +23,9 @@
     "postcss": "^8.5.6",
     "tailwindcss": "3.4.18",
     "vite": "5.4.21",
-    "weapp-tailwindcss": "^4.8.6"
+    "weapp-tailwindcss": "^4.8.8"
   },
   "dependencies": {
-    "@weapp-tailwindcss/merge": "^2.1.2"
+    "@weapp-tailwindcss/merge-v3": "^0.1.2"
   }
 }
