--- a/templates/vue-mini-tailwindcss-template/package.json
+++ b/templates/vue-mini-tailwindcss-template/package.json
@@ -17,8 +17,8 @@
   },
   "dependencies": {
     "@vue-mini/core": "^1.2.6",
-    "@weapp-tailwindcss/merge": "^2.1.2",
-    "tdesign-miniprogram": "^1.11.1"
+    "tdesign-miniprogram": "^1.11.1",
+    "@weapp-tailwindcss/merge-v3": "^0.1.2"
   },
   "devDependencies": {
     "@icebreakers/eslint-config": "^1.5.9",
@@ -30,14 +30,14 @@
     "sass-embedded": "^1.93.3",
     "tailwindcss": "^3.4.18",
     "typescript": "^5.9.3",
-    "weapp-tailwindcss": "^4.8.6",
+    "weapp-tailwindcss": "^4.8.8",
     "weapp-vite": "^5.10.0"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
       "esbuild",
       "weapp-tailwindcss",
-      "@weapp-tailwindcss/merge"
+      "@weapp-tailwindcss/merge-v3"
     ]
   }
 }
