chore: templates:update-deps

--- a/templates/taro-webpack-tailwindcss-v4/package.json
+++ b/templates/taro-webpack-tailwindcss-v4/package.json
@@ -92,7 +92,9 @@
   },
   "pnpm": {
     "onlyBuiltDependencies": [
-      "@weapp-tailwindcss/merge"
+      "@weapp-tailwindcss/merge",
+      "weapp-tailwindcss"
     ]
-  }
+  },
+  "packageManager": "pnpm@10.24.0"
 }
