--- a/templates/taro-react-tailwind-vscode-template/package.json
+++ b/templates/taro-react-tailwind-vscode-template/package.json
@@ -88,7 +88,9 @@
   },
   "pnpm": {
     "onlyBuiltDependencies": [
-      "@weapp-tailwindcss/merge-v3"
+      "@weapp-tailwindcss/merge-v3",
+      "weapp-tailwindcss"
     ]
-  }
+  },
+  "packageManager": "pnpm@10.24.0"
 }
