--- a/templates/weapp-native-mina-tailwindcss-template/package.json
+++ b/templates/weapp-native-mina-tailwindcss-template/package.json
@@ -71,5 +71,6 @@
     "webpack": "^5.92.0",
     "webpack-cli": "^6.0.1",
     "webpack-sources": "^3.2.3"
-  }
+  },
+  "packageManager": "pnpm@10.24.0"
 }
