--- a/demo/native/package.json
+++ b/demo/native/package.json
@@ -11,7 +11,7 @@
   "author": "ice breaker <1324318532@qq.com>",
   "license": "ISC",
   "devDependencies": {
-    "@weapp-tailwindcss/merge": "catalog:weappMerge",
+    "@weapp-tailwindcss/merge-v3": "workspace:*",
     "postcss-rem-to-responsive-pixel": "catalog:postcssRem602",
     "postcss-rpx-transform": "catalog:postcssRpx",
     "tailwindcss": "catalog:tailwindcss3",
