--- a/demo/web/package.json
+++ b/demo/web/package.json
@@ -14,7 +14,7 @@
     "postcss": "^8.4.38"
   },
   "devDependencies": {
-    "@weapp-tailwindcss/merge": "catalog:weappMerge",
+    "@weapp-tailwindcss/merge-v3": "workspace:*",
     "postcss-rem-to-responsive-pixel": "catalog:postcssRem602",
     "postcss-rpx-transform": "catalog:postcssRpx",
     "tailwindcss": "catalog:tailwindcss3",
