--- a/apps/uni-app-x-hbuilderx-tailwindcss3/package.json
+++ b/apps/uni-app-x-hbuilderx-tailwindcss3/package.json
@@ -7,6 +7,7 @@
   },
   "devDependencies": {
     "@weapp-tailwindcss/debug-uni-app-x": "workspace:*",
+    "@weapp-tailwindcss/merge-v3": "workspace:*",
     "tailwindcss": "catalog:tailwindcss3",
     "tailwindcss-patch": "catalog:tailwindcssPatch",
     "weapp-tailwindcss": "workspace:*"
