--- a/apps/vite-native-skyline/package.json
+++ b/apps/vite-native-skyline/package.json
@@ -29,6 +29,7 @@
     "miniprogram-api-typings": "catalog:miniApiTypings",
     "postcss": "catalog:postcss85",
     "tailwindcss": "catalog:tailwindcss3",
+    "@weapp-tailwindcss/merge-v3": "workspace:*",
     "typescript": "catalog:typescript59",
     "weapp-tailwindcss": "workspace:*",
     "weapp-vite": "catalog:weappVite"
