--- a/demo/mpx-app/package.json
+++ b/demo/mpx-app/package.json
@@ -54,7 +54,7 @@
     "@mpxjs/vue-cli-plugin-mpx-unit-test": "2.2.5",
     "@mpxjs/webpack-plugin": "2.10.17",
     "@vue/cli-service": "~5.0.0",
-    "@weapp-tailwindcss/merge": "catalog:weappMerge",
+    "@weapp-tailwindcss/merge-v3": "workspace:*",
     "autoprefixer": "catalog:autoprefixer10",
     "babel-jest": "^30.2.0",
     "cross-env": "catalog:crossEnv",
