--- a/demo/taro-app/package.json
+++ b/demo/taro-app/package.json
@@ -64,7 +64,7 @@
     "@types/webpack-env": "^1.18.8",
     "@typescript-eslint/eslint-plugin": "^8.48.1",
     "@typescript-eslint/parser": "^8.48.1",
-    "@weapp-tailwindcss/merge": "catalog:weappMerge",
+    "@weapp-tailwindcss/merge-v3": "workspace:*",
     "autoprefixer": "catalog:autoprefixer10",
     "babel-plugin-import": "^1.13.8",
     "babel-preset-taro": "catalog:taro4",
