--- a/demo/uni-app/package.json
+++ b/demo/uni-app/package.json
@@ -101,7 +101,7 @@
     "@vue/cli-plugin-babel": "~5.0.8",
     "@vue/cli-plugin-typescript": "~5.0.8",
     "@vue/cli-service": "~5.0.8",
-    "@weapp-tailwindcss/merge": "catalog:weappMerge",
+    "@weapp-tailwindcss/merge-v3": "workspace:*",
     "autoprefixer": "10.4.22",
     "babel-plugin-import": "^1.13.8",
     "cross-env": "^7.0.3",
