chore(deps): upgrade

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -27,7 +27,7 @@ catalogs:
   lucideVueNext0555:
     lucide-vue-next: ^0.555.0
   miniApiTypings:
-    miniprogram-api-typings: ^4.1.0
+    miniprogram-api-typings: ^4.1.1
   postcss85:
     postcss: ^8.5.6
   postcssComment2:
@@ -48,8 +48,8 @@ catalogs:
   react19:
     '@types/react': 19.2.2
     '@types/react-dom': 19.1.13
-    react: 19.2.0
-    react-dom: 19.2.0
+    react: ^19.2.1
+    react-dom: ^19.2.1
   reactRefresh018:
     react-refresh: ^0.18.0
   stylelint1625:
