--- a/package.json
+++ b/package.json
@@ -119,8 +119,8 @@
     "@csstools/postcss-is-pseudo-class": "^5.0.3",
     "@eslint/config-inspector": "^1.4.2",
     "@icebreakers/commitlint-config": "^1.2.2",
-    "@icebreakers/eslint-config": "^1.6.1",
-    "@icebreakers/monorepo": "^3.0.3",
+    "@icebreakers/eslint-config": "^1.6.2",
+    "@icebreakers/monorepo": "^3.1.0",
     "@icebreakers/stylelint-config": "^1.2.3",
     "@swc/core": "^1.15.3",
     "@tailwindcss/postcss": "catalog:tailwindcss4",
@@ -169,7 +169,7 @@
     "autoprefixer": "catalog:autoprefixer10",
     "babel-loader": "^10.0.0",
     "boxen": "^8.0.1",
-    "browserslist": "^4.28.0",
+    "browserslist": "^4.28.1",
     "chokidar": "^4.0.3",
     "ci-info": "^4.3.1",
     "clsx": "^2.1.1",
@@ -187,7 +187,7 @@
     "dlv": "^1.1.3",
     "domhandler": "^5.0.3",
     "es-toolkit": "^1.42.0",
-    "esbuild": "^0.27.0",
+    "esbuild": "^0.27.1",
     "eslint": "^9.39.1",
     "execa": "^9.6.1",
     "express": "^5.2.1",
@@ -241,11 +241,11 @@
     "traverse": "^0.6.11",
     "ts-morph": "^27.0.2",
     "tsd": "^0.33.0",
-    "tsdown": "^0.16.8",
+    "tsdown": "0.17.0-beta.6",
     "tslib": "^2.8.1",
     "tsup": "^8.5.1",
     "tsx": "^4.21.0",
-    "turbo": "^2.6.1",
+    "turbo": "^2.6.2",
     "type-fest": "^5.3.0",
     "typescript": "catalog:typescript59",
     "unbuild": "^3.6.1",
