chore: tailwind-variant-v3

--- a/packages-runtime/tailwind-variant-v3/package.json
+++ b/packages-runtime/tailwind-variant-v3/package.json
@@ -45,7 +45,16 @@
     "lint:fix": "eslint . --fix"
   },
   "publishConfig": {},
-  "dependencies": {
-    "tailwind-merge": "^2.6.0"
+  "peerDependencies": {
+    "tailwind-merge": ">=2 <3"
+  },
+  "peerDependenciesMeta": {
+    "tailwind-merge": {
+      "optional": true
+    }
+  },
+  "dependencies": {},
+  "devDependencies": {
+    "tailwind-merge": ">=2 <3"
   }
 }
