chore: bump @weapp-tailwindcss/variants-v3

--- a/packages-runtime/variants-v3/package.json
+++ b/packages-runtime/variants-v3/package.json
@@ -43,5 +43,10 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
-  "publishConfig": {}
+  "publishConfig": {},
+  "dependencies": {
+    "@weapp-tailwindcss/merge-v3": "workspace:*",
+    "@weapp-tailwindcss/runtime": "workspace:*",
+    "tailwind-variant-v3": "workspace:*"
+  }
 }
