--- a/package.json
+++ b/package.json
@@ -112,15 +112,15 @@
     "@babel/generator": "~7.28.5",
     "@changesets/changelog-github": "^0.5.2",
     "@changesets/cli": "^2.29.8",
-    "@commitlint/cli": "^20.1.0",
+    "@commitlint/cli": "^20.2.0",
     "@csstools/css-color-parser": "^3.1.0",
     "@csstools/css-parser-algorithms": "^3.0.5",
     "@csstools/css-tokenizer": "^3.0.4",
     "@csstools/postcss-is-pseudo-class": "^5.0.3",
     "@eslint/config-inspector": "^1.4.2",
-    "@icebreakers/commitlint-config": "^1.2.2",
-    "@icebreakers/eslint-config": "^1.6.2",
-    "@icebreakers/monorepo": "^3.1.0",
+    "@icebreakers/commitlint-config": "^1.2.3",
+    "@icebreakers/eslint-config": "^1.6.3",
+    "@icebreakers/monorepo": "^3.1.1",
     "@icebreakers/stylelint-config": "^1.2.3",
     "@swc/core": "^1.15.3",
     "@tailwindcss/postcss": "catalog:tailwindcss4",
@@ -222,7 +222,7 @@
     "postcss-js": "^5.0.1",
     "postcss-load-config": "^6.0.1",
     "postcss-loader": "^8.2.0",
-    "postcss-preset-env": "^10.4.0",
+    "postcss-preset-env": "^10.5.0",
     "postcss-scss": "^4.0.9",
     "prettier": "catalog:prettier371",
     "promisify-loader-runner": "^1.0.1",
@@ -230,22 +230,22 @@
     "rollup": "^4.53.3",
     "sass": "^1.94.2",
     "sass-embedded": "^1.93.3",
-    "sass-true": "^10.0.0",
+    "sass-true": "^10.0.1",
     "semver": "7.7.3",
     "set-value": "^4.1.0",
     "style-loader": "^4.0.0",
     "stylelint": "catalog:stylelint1625",
     "tailwindcss": "catalog:tailwindcss3",
     "tailwindcss4": "catalog:tailwindcss4",
-    "terser-webpack-plugin": "^5.3.14",
+    "terser-webpack-plugin": "^5.3.15",
     "traverse": "^0.6.11",
     "ts-morph": "^27.0.2",
     "tsd": "^0.33.0",
-    "tsdown": "0.17.0-beta.6",
+    "tsdown": "0.17.0",
     "tslib": "^2.8.1",
     "tsup": "^8.5.1",
     "tsx": "^4.21.0",
-    "turbo": "^2.6.2",
+    "turbo": "^2.6.3",
     "type-fest": "^5.3.0",
     "typescript": "catalog:typescript59",
     "unbuild": "^3.6.1",
