--- a/templates/weapp-native-mina-tailwindcss-template/package.json
+++ b/templates/weapp-native-mina-tailwindcss-template/package.json
@@ -66,11 +66,17 @@
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "^5.9.3",
     "weapp-ide-cli": "^4.1.0",
-    "weapp-tailwindcss": "^4.8.8",
+    "weapp-tailwindcss": "^4.8.9",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.92.0",
     "webpack-cli": "^6.0.1",
     "webpack-sources": "^3.2.3"
   },
-  "packageManager": "pnpm@10.24.0"
+  "packageManager": "pnpm@10.24.0",
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "weapp-tailwindcss",
+      "@weapp-tailwindcss/merge-v3"
+    ]
+  }
 }
