--- a/templates/uni-app-vite-vue3-tailwind-vscode-template/package.json
+++ b/templates/uni-app-vite-vue3-tailwind-vscode-template/package.json
@@ -7,7 +7,7 @@
     "build": "npm run build:mp-weixin",
     "dev:app": "uni -p app",
     "dev:custom": "uni -p",
-    "dev:h5": "uni",
+    "dev:h5": "uni --host",
     "dev:h5:ssr": "uni --ssr",
     "dev:mp-alipay": "uni -p mp-alipay",
     "dev:mp-baidu": "uni -p mp-baidu",
@@ -62,10 +62,10 @@
     "@dcloudio/uni-mp-xhs": "3.0.0-4080520251106001",
     "@dcloudio/uni-quickapp-webview": "3.0.0-4080520251106001",
     "@vue/shared": "3.4.21",
+    "@weapp-tailwindcss/merge-v3": "^0.1.2",
     "pinia": "2.2.4",
     "vue": "^3.4.21",
-    "vue-i18n": "^9.1.9",
-    "@weapp-tailwindcss/merge-v3": "^0.1.2"
+    "vue-i18n": "^9.1.9"
   },
   "devDependencies": {
     "@dcloudio/types": "^3.4.8",
@@ -74,7 +74,7 @@
     "@dcloudio/uni-stacktracey": "3.0.0-4080520251106001",
     "@dcloudio/vite-plugin-uni": "3.0.0-4080520251106001",
     "@egoist/tailwindcss-icons": "^1.9.0",
-    "@icebreakers/eslint-config": "^1.5.10",
+    "@icebreakers/eslint-config": "^1.6.3",
     "@icebreakers/stylelint-config": "^1.2.3",
     "@iconify-json/mdi": "^1.2.3",
     "@iconify-json/svg-spinners": "^1.2.4",
@@ -86,16 +86,14 @@
     "sass": "^1.94.2",
     "tailwindcss": "^3.4.18",
     "typescript": "^5.9.3",
-    "unplugin-auto-import": "^20.2.0",
+    "unplugin-auto-import": "^20.3.0",
     "vite": "5.2.8",
     "weapp-ide-cli": "^4.1.0",
     "weapp-tailwindcss": "^4.8.9"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
-      "vue-demi",
-      "weapp-tailwindcss",
-      "@weapp-tailwindcss/merge-v3"
+      "weapp-tailwindcss"
     ]
   }
 }
