--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -122,3 +122,7 @@ onlyBuiltDependencies:
   - '@tarojs/cli'
   - '@weapp-tailwindcss/merge'
   - esbuild
+packageExtensions:
+  '@dcloudio/vue-cli-plugin-hbuilderx@*':
+    dependencies:
+      '@dcloudio/uni-cli-shared': 2.0.2-4080520251106001
