--- a/apps/taro-webpack-tailwindcss-v4/package.json
+++ b/apps/taro-webpack-tailwindcss-v4/package.json
@@ -77,6 +77,7 @@
     "@tarojs/webpack5-runner": "catalog:taro4",
     "@types/node": "^24.10.1",
     "@types/react": "catalog:react18",
+    "@types/react-dom": "catalog:react18",
     "@types/webpack-env": "^1.13.6",
     "@weapp-tailwindcss/merge": "workspace:*",
     "babel-preset-taro": "catalog:taro4",
