--- a/demo/taro-vue3-app/package.json
+++ b/demo/taro-vue3-app/package.json
@@ -68,6 +68,7 @@
     "@babel/plugin-syntax-decorators": "^7.27.1",
     "@tarojs/cli": "catalog:taro4",
     "@tarojs/plugin-platform-weapp": "catalog:taro4",
+    "@tarojs/taro-loader": "catalog:taro4",
     "@tarojs/webpack5-runner": "catalog:taro4",
     "@types/webpack-env": "^1.18.8",
     "@typescript-eslint/eslint-plugin": "^8.48.1",
