--- a/apps/react-app/package.json
+++ b/apps/react-app/package.json
@@ -34,6 +34,7 @@
     "tw-animate-css": "^1.4.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.48.1",
-    "vite": "^7.2.6"
+    "vite": "^7.2.6",
+    "wrangler": "catalog:wrangler4530"
   }
 }
