--- a/apps/react-app/wrangler.jsonc
+++ b/apps/react-app/wrangler.jsonc
@@ -1,7 +1,14 @@
 {
+  "$schema": "./node_modules/wrangler/config-schema.json",
   "name": "weapp-tailwindcss-react",
   "compatibility_date": "2025-12-07",
   "assets": {
     "directory": "./dist"
-  }
+  },
+  "routes": [
+    {
+      "custom_domain": true,
+      "pattern": "react.tw.icebreaker.top"
+    }
+  ]
 }
