--- a/apps/vue-app/package.json
+++ b/apps/vue-app/package.json
@@ -25,6 +25,7 @@
     "tw-animate-css": "^1.4.0",
     "typescript": "catalog:typescript59tilde",
     "vite": "catalog:vite724",
-    "vue-tsc": "^3.1.6"
+    "vue-tsc": "^3.1.6",
+    "wrangler": "catalog:wrangler4530"
   }
 }
