--- a/website/package.json
+++ b/website/package.json
@@ -83,7 +83,8 @@
     "typedoc": "^0.28.15",
     "typedoc-plugin-markdown": "4.9.0",
     "webpack": "5.103.0",
-    "webpack-node-externals": "^3.0.0"
+    "webpack-node-externals": "^3.0.0",
+    "wrangler": "catalog:wrangler4530"
   },
   "browserslist": {
     "production": [
