chore(deps): upgrade

--- a/apps/react-app/package.json
+++ b/apps/react-app/package.json
@@ -14,17 +14,18 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "catalog:lucideReact0555",
-    "react": "^19.2.1",
-    "react-dom": "^19.2.1",
+    "react": "catalog:react19",
+    "react-dom": "catalog:react19",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@tailwindcss/vite": "^4.1.17",
     "@types/node": "^24.10.1",
-    "@types/react": "^19.2.5",
-    "@types/react-dom": "^19.2.3",
+    "@types/react": "catalog:react19",
+    "@types/react-dom": "catalog:react19",
     "@vitejs/plugin-react": "^5.1.1",
+    "@weapp-tailwindcss/variants": "workspace:*",
     "babel-plugin-react-compiler": "^1.0.0",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
