--- a/demo/mpx-tailwindcss-v4/package.json
+++ b/demo/mpx-tailwindcss-v4/package.json
@@ -38,7 +38,8 @@
     "@mpxjs/webpack-plugin": "^2.10.17",
     "@tailwindcss/postcss": "catalog:tailwindcss4",
     "@vue/cli-service": "~5.0.0",
-    "@weapp-tailwindcss/merge": "catalog:weappMerge",
+    "@weapp-tailwindcss/merge": "workspace:*",
+    "@weapp-tailwindcss/variants": "workspace:*",
     "autoprefixer": "catalog:autoprefixer10",
     "eslint": "^9.39.1",
     "postcss": "^8.5.3",
