--- a/demo/rax-app/package.json
+++ b/demo/rax-app/package.json
@@ -43,6 +43,7 @@
     "@iceworks/spec": "^1.6.0",
     "@types/rax": "^1.0.21",
     "@weapp-tailwindcss/merge-v3": "workspace:*",
+    "@weapp-tailwindcss/variants-v3": "workspace:*",
     "autoprefixer": "catalog:autoprefixer10",
     "cross-env": "catalog:crossEnv",
     "eslint": "^9.39.1",
