--- a/apps/uni-app-x-hbuilderx-tailwindcss4/package.json
+++ b/apps/uni-app-x-hbuilderx-tailwindcss4/package.json
@@ -9,6 +9,7 @@
     "@tailwindcss/postcss": "catalog:tailwindcss4",
     "@weapp-tailwindcss/debug-uni-app-x": "workspace:*",
     "@weapp-tailwindcss/merge": "workspace:*",
+    "@weapp-tailwindcss/variants": "workspace:*",
     "tailwindcss": "catalog:tailwindcss4",
     "tailwindcss-patch": "catalog:tailwindcssPatch",
     "weapp-tailwindcss": "workspace:*"
