--- a/apps/vite-native-ts-skyline/package.json
+++ b/apps/vite-native-ts-skyline/package.json
@@ -27,6 +27,7 @@
     "@egoist/tailwindcss-icons": "^1.9.0",
     "@iconify-json/mdi": "^1.2.3",
     "@weapp-tailwindcss/merge-v3": "workspace:*",
+    "@weapp-tailwindcss/variants-v3": "workspace:*",
     "autoprefixer": "catalog:autoprefixer10",
     "miniprogram-api-typings": "catalog:miniApiTypings",
     "postcss": "catalog:postcss85",
