--- a/apps/vue-app/package.json
+++ b/apps/vue-app/package.json
@@ -20,6 +20,7 @@
     "@tailwindcss/postcss": "catalog:tailwindcss4",
     "@vitejs/plugin-vue": "^6.0.2",
     "@vue/tsconfig": "^0.8.1",
+    "@weapp-tailwindcss/variants": "workspace:*",
     "postcss": "catalog:postcss85",
     "tailwindcss": "catalog:tailwindcss4",
     "tw-animate-css": "^1.4.0",
