--- a/demo/native-mina/package.json
+++ b/demo/native-mina/package.json
@@ -34,6 +34,7 @@
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@types/lodash": "^4.17.21",
     "@weapp-tailwindcss/merge-v3": "workspace:*",
+    "@weapp-tailwindcss/variants-v3": "workspace:*",
     "autoprefixer": "catalog:autoprefixer10",
     "babel-loader": "^10.0.0",
     "babel-plugin-lodash": "^3.3.4",
