--- a/demo/taro-app/package.json
+++ b/demo/taro-app/package.json
@@ -47,8 +47,8 @@
     "@tarojs/taro": "catalog:taro4",
     "antd-mobile": "^5.39.0",
     "classnames": "^2.5.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "catalog:react18",
+    "react-dom": "catalog:react18",
     "taro-hooks": "2.2.0"
   },
   "devDependencies": {
@@ -60,11 +60,12 @@
     "@tarojs/plugin-platform-h5": "catalog:taro4",
     "@tarojs/plugin-platform-weapp": "catalog:taro4",
     "@tarojs/webpack5-runner": "catalog:taro4",
-    "@types/react": "^19.1.13",
+    "@types/react": "catalog:react18",
     "@types/webpack-env": "^1.18.8",
     "@typescript-eslint/eslint-plugin": "^8.48.1",
     "@typescript-eslint/parser": "^8.48.1",
     "@weapp-tailwindcss/merge-v3": "workspace:*",
+    "@weapp-tailwindcss/variants-v3": "workspace:*",
     "autoprefixer": "catalog:autoprefixer10",
     "babel-plugin-import": "^1.13.8",
     "babel-preset-taro": "catalog:taro4",
