--- a/demo/taro-vite-tailwindcss-v4/package.json
+++ b/demo/taro-vite-tailwindcss-v4/package.json
@@ -62,8 +62,8 @@
     "@tarojs/runtime": "catalog:taro4",
     "@tarojs/shared": "catalog:taro4",
     "@tarojs/taro": "catalog:taro4",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react": "catalog:react18",
+    "react-dom": "catalog:react18"
   },
   "devDependencies": {
     "@babel/core": "catalog:babelCore7285",
@@ -73,9 +73,10 @@
     "@tailwindcss/vite": "catalog:tailwindcss4",
     "@tarojs/cli": "catalog:taro4",
     "@tarojs/vite-runner": "catalog:taro4",
-    "@types/react": "^19.1.13",
+    "@types/react": "catalog:react18",
     "@vitejs/plugin-react": "^5.1.1",
-    "@weapp-tailwindcss/merge": "catalog:weappMerge",
+    "@weapp-tailwindcss/merge": "workspace:*",
+    "@weapp-tailwindcss/variants": "workspace:*",
     "babel-preset-taro": "catalog:taro4",
     "eslint": "^9.39.1",
     "eslint-config-taro": "catalog:taro4",
