--- a/demo/uni-app-tailwindcss-v4/package.json
+++ b/demo/uni-app-tailwindcss-v4/package.json
@@ -77,6 +77,7 @@
     "@vue/runtime-core": "3.4.21",
     "@vue/tsconfig": "^0.8.1",
     "@weapp-tailwindcss/merge": "workspace:*",
+    "@weapp-tailwindcss/variants": "workspace:*",
     "tailwindcss": "catalog:tailwindcss4",
     "tailwindcss-patch": "catalog:tailwindcssPatch",
     "typescript": "catalog:typescript59",
