--- a/demo/uni-app-webpack-tailwindcss-v4/package.json
+++ b/demo/uni-app-webpack-tailwindcss-v4/package.json
@@ -97,7 +97,8 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-typescript": "~5.0.8",
     "@vue/cli-service": "~5.0.0",
-    "@weapp-tailwindcss/merge": "catalog:weappMerge",
+    "@weapp-tailwindcss/merge": "workspace:*",
+    "@weapp-tailwindcss/variants": "workspace:*",
     "babel-plugin-import": "^1.13.8",
     "cross-env": "^7.0.3",
     "jest": "^25.5.4",
