--- a/demo/uni-app-x-hbuilderx-tailwindcss4/package.json
+++ b/demo/uni-app-x-hbuilderx-tailwindcss4/package.json
@@ -10,7 +10,8 @@
   "devDependencies": {
     "@tailwindcss/postcss": "catalog:tailwindcss4",
     "@weapp-tailwindcss/debug-uni-app-x": "workspace:*",
-    "@weapp-tailwindcss/merge": "catalog:weappMerge",
+    "@weapp-tailwindcss/merge": "workspace:*",
+    "@weapp-tailwindcss/variants": "workspace:*",
     "tailwindcss": "catalog:tailwindcss4",
     "tailwindcss-patch": "catalog:tailwindcssPatch",
     "weapp-ide-cli": "catalog:weappIdeCli",
