--- a/website/package.json
+++ b/website/package.json
@@ -60,7 +60,9 @@
     "@iconify-json/line-md": "^1.2.11",
     "@iconify-json/logos": "^1.2.10",
     "@iconify-json/mdi": "^1.2.3",
+    "@iconify-json/mdi-light": "^1.2.2",
     "@iconify/tailwind": "^1.2.0",
+    "@iconify/types": "^2.0.0",
     "@playwright/test": "^1.57.0",
     "@tailwindcss/typography": "^0.5.19",
     "@types/file-saver": "^2.0.7",
