chore(deps): upgrade

--- a/demo/gulp-app/package.json
+++ b/demo/gulp-app/package.json
@@ -52,7 +52,7 @@
     "@types/gulp-replace": "^1.1.0",
     "@types/gulp-sass": "^6.0.0",
     "@types/gulp-util": "^3.0.41",
-    "@types/node": "^24.10.2",
+    "@types/node": "catalog:typesNode2410",
     "@weapp-tailwindcss/merge-v3": "workspace:*",
     "@weapp-tailwindcss/variants-v3": "workspace:*",
     "autoprefixer": "catalog:autoprefixer10",
@@ -77,7 +77,7 @@
     "postcss-rem-to-responsive-pixel": "catalog:postcssRem602",
     "postcss-rpx-transform": "catalog:postcssRpx",
     "prettier": "catalog:prettier371",
-    "sass": "^1.95.0",
+    "sass": "catalog:sass195",
     "tailwindcss": "catalog:tailwindcss3",
     "tailwindcss-patch": "catalog:tailwindcssPatch",
     "tailwindcss-rem2px-preset": "catalog:tailwindcssRem",
