--- a/demo/taro-app/package.json
+++ b/demo/taro-app/package.json
@@ -62,8 +62,8 @@
     "@tarojs/webpack5-runner": "catalog:taro4",
     "@types/react": "catalog:react18",
     "@types/webpack-env": "^1.18.8",
-    "@typescript-eslint/eslint-plugin": "^8.49.0",
-    "@typescript-eslint/parser": "^8.49.0",
+    "@typescript-eslint/eslint-plugin": "catalog:typescriptEslint849",
+    "@typescript-eslint/parser": "catalog:typescriptEslint849",
     "@weapp-tailwindcss/merge-v3": "workspace:*",
     "@weapp-tailwindcss/variants-v3": "workspace:*",
     "autoprefixer": "catalog:autoprefixer10",
