--- a/demo/taro-vue3-app/package.json
+++ b/demo/taro-vue3-app/package.json
@@ -71,8 +71,8 @@
     "@tarojs/taro-loader": "catalog:taro4",
     "@tarojs/webpack5-runner": "catalog:taro4",
     "@types/webpack-env": "^1.18.8",
-    "@typescript-eslint/eslint-plugin": "^8.49.0",
-    "@typescript-eslint/parser": "^8.49.0",
+    "@typescript-eslint/eslint-plugin": "catalog:typescriptEslint849",
+    "@typescript-eslint/parser": "catalog:typescriptEslint849",
     "@vue/babel-plugin-jsx": "^2.0.1",
     "@vue/compiler-sfc": "catalog:vue3",
     "@weapp-tailwindcss/merge-v3": "workspace:*",
