--- a/apps/react-app/package.json
+++ b/apps/react-app/package.json
@@ -21,7 +21,7 @@
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@tailwindcss/vite": "^4.1.17",
-    "@types/node": "^24.10.2",
+    "@types/node": "catalog:typesNode2410",
     "@types/react": "catalog:react19",
     "@types/react-dom": "catalog:react19",
     "@vitejs/plugin-react": "^5.1.2",
@@ -33,8 +33,8 @@
     "globals": "^16.5.0",
     "tailwindcss": "^4.1.17",
     "tw-animate-css": "^1.4.0",
-    "typescript": "~5.9.3",
-    "typescript-eslint": "^8.49.0",
+    "typescript": "catalog:typescript59tilde",
+    "typescript-eslint": "catalog:typescriptEslint849",
     "vite": "^7.2.7",
     "wrangler": "catalog:wrangler4530"
   }
