--- a/apps/vue-app/package.json
+++ b/apps/vue-app/package.json
@@ -26,7 +26,7 @@
     "tw-animate-css": "^1.4.0",
     "typescript": "catalog:typescript59tilde",
     "vite": "catalog:vite724",
-    "vue-tsc": "^3.1.8",
+    "vue-tsc": "catalog:vueTsc318",
     "wrangler": "catalog:wrangler4530"
   }
 }
