--- a/benchmark/package.json
+++ b/benchmark/package.json
@@ -35,7 +35,7 @@
     "vite": "^7.2.7",
     "vite-plugin-inspect": "^11.3.3",
     "vue-echarts": "^8.0.1",
-    "vue-tsc": "^3.1.8",
+    "vue-tsc": "catalog:vueTsc318",
     "weapp-tailwindcss": "workspace:*"
   }
 }
