--- a/demo/taro-webpack-tailwindcss-v4/package.json
+++ b/demo/taro-webpack-tailwindcss-v4/package.json
@@ -75,7 +75,7 @@
     "@tarojs/cli": "catalog:taro4",
     "@tarojs/taro-loader": "catalog:taro4",
     "@tarojs/webpack5-runner": "catalog:taro4",
-    "@types/node": "^24.10.2",
+    "@types/node": "catalog:typesNode2410",
     "@types/react": "catalog:react18",
     "@types/webpack-env": "^1.13.6",
     "@weapp-tailwindcss/merge": "workspace:*",
