--- a/package.json
+++ b/package.json
@@ -150,7 +150,7 @@
     "@types/lodash-es": "^4.17.12",
     "@types/md5": "^2.3.6",
     "@types/micromatch": "^4.0.10",
-    "@types/node": "^24.10.2",
+    "@types/node": "catalog:typesNode2410",
     "@types/npm-registry-fetch": "^8.0.9",
     "@types/postcss-js": "^4.1.0",
     "@types/semver": "^7.7.1",
@@ -228,7 +228,7 @@
     "promisify-loader-runner": "^1.0.1",
     "rimraf": "^6.1.2",
     "rollup": "^4.53.3",
-    "sass": "^1.95.0",
+    "sass": "catalog:sass195",
     "sass-embedded": "^1.93.3",
     "sass-true": "^10.0.1",
     "semver": "7.7.3",
