--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -54,6 +54,8 @@ catalogs:
     react-refresh: ^0.18.0
   stylelint1625:
     stylelint: ^16.26.1
+  sass195:
+    sass: ^1.95.0
   tailwindMerge:
     tailwind-merge: ^3.4.0
   tailwindcss3:
@@ -93,6 +95,12 @@ catalogs:
     eslint-config-taro: ^4.1.9
   taroPxtransform:
     postcss-pxtransform: ^4.1.9
+  typesNode2410:
+    '@types/node': ^24.10.2
+  typescriptEslint849:
+    '@typescript-eslint/eslint-plugin': ^8.49.0
+    '@typescript-eslint/parser': ^8.49.0
+    typescript-eslint: ^8.49.0
   typescript59:
     typescript: ^5.9.3
   typescript59tilde:
@@ -105,6 +113,8 @@ catalogs:
     '@vue/compiler-dom': ^3.5.25
     '@vue/compiler-sfc': ^3.5.25
     vue: ^3.5.25
+  vueTsc318:
+    vue-tsc: ^3.1.8
   weappChildren:
     weapp-tailwindcss-children: ^0.1.0
   weappIdeCli:
