--- a/website/package.json
+++ b/website/package.json
@@ -66,7 +66,7 @@
     "@playwright/test": "^1.57.0",
     "@tailwindcss/typography": "^0.5.19",
     "@types/file-saver": "^2.0.7",
-    "@types/node": "^24.10.2",
+    "@types/node": "catalog:typesNode2410",
     "@types/react": "catalog:react19",
     "@types/react-dom": "catalog:react19",
     "autoprefixer": "catalog:autoprefixer10",
@@ -78,7 +78,7 @@
     "dotenv": "^17.2.3",
     "mini-svg-data-uri": "^1.4.4",
     "node-loader": "^2.1.0",
-    "sass": "^1.95.0",
+    "sass": "catalog:sass195",
     "sass-loader": "^16.0.6",
     "tailwindcss": "catalog:tailwindcss3",
     "theme-transition": "workspace:*",
