chore: templates:update-deps

--- a/templates/uni-app-vite-vue3-tailwind-vscode-template/package.json
+++ b/templates/uni-app-vite-vue3-tailwind-vscode-template/package.json
@@ -1,7 +1,7 @@
 {
   "name": "uni-app-vite-vue3-tailwind-vscode-template",
   "version": "0.0.0",
-  "packageManager": "pnpm@10.24.0",
+  "packageManager": "pnpm@10.25.0",
   "scripts": {
     "dev": "uni -p mp-weixin",
     "build": "npm run build:mp-weixin",
@@ -62,7 +62,7 @@
     "@dcloudio/uni-mp-xhs": "3.0.0-4080520251106001",
     "@dcloudio/uni-quickapp-webview": "3.0.0-4080520251106001",
     "@vue/shared": "3.4.21",
-    "@weapp-tailwindcss/merge-v3": "^0.1.2",
+    "@weapp-tailwindcss/merge-v3": "^0.1.3",
     "pinia": "2.2.4",
     "vue": "^3.4.21",
     "vue-i18n": "^9.1.9"
@@ -83,17 +83,18 @@
     "autoprefixer": "^10.4.22",
     "eslint": "^9.39.1",
     "postcss": "^8.5.6",
-    "sass": "^1.94.2",
-    "tailwindcss": "^3.4.18",
+    "sass": "^1.96.0",
+    "tailwindcss": "^3.4.19",
     "typescript": "^5.9.3",
     "unplugin-auto-import": "^20.3.0",
     "vite": "5.2.8",
-    "weapp-ide-cli": "^4.1.0",
-    "weapp-tailwindcss": "^4.8.9"
+    "weapp-ide-cli": "^4.1.1",
+    "weapp-tailwindcss": "^4.8.10"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
-      "weapp-tailwindcss"
+      "weapp-tailwindcss",
+      "@weapp-tailwindcss/merge-v3"
     ]
   }
 }
