--- a/templates/vue-mini-tailwindcss-template/package.json
+++ b/templates/vue-mini-tailwindcss-template/package.json
@@ -17,8 +17,8 @@
   },
   "dependencies": {
     "@vue-mini/core": "^1.2.6",
-    "tdesign-miniprogram": "^1.11.1",
-    "@weapp-tailwindcss/merge-v3": "^0.1.3"
+    "@weapp-tailwindcss/merge-v3": "^0.1.3",
+    "tdesign-miniprogram": "^1.11.1"
   },
   "devDependencies": {
     "@icebreakers/eslint-config": "^1.5.9",
