--- a/package.json
+++ b/package.json
@@ -101,7 +101,8 @@
     "script:clean": "monorepo clean",
     "script:mirror": "monorepo mirror",
     "commitlint": "commitlint --edit",
-    "up:pkg": "pnpm up -rLi \"!@dcloudio/*\"",
+    "up:pkg:latest": "pnpm up -rLi \"!@dcloudio/*\"",
+    "up:pkg": "pnpm up -ri \"!@dcloudio/*\"",
     "up:uniapp": "pnpx @dcloudio/uvm@latest"
   },
   "publishConfig": {
@@ -239,7 +240,7 @@
     "stylelint": "catalog:stylelint1625",
     "tailwindcss": "catalog:tailwindcss3",
     "tailwindcss4": "catalog:tailwindcss4",
-    "terser-webpack-plugin": "^5.3.15",
+    "terser-webpack-plugin": "^5.3.16",
     "traverse": "^0.6.11",
     "ts-morph": "^27.0.2",
     "tsd": "^0.33.0",
