--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "scripts": {
     "build": "turbo run build",
+    "postbuild": "pnpm run e2e:update-snapshots",
     "build:nocache": "cross-env TURBO_FORCE=1 pnpm build",
     "build:docs": "turbo run build --filter=./website/",
     "build:apps": "turbo run build --filter=./apps/*",
@@ -63,6 +64,7 @@
     "e2e": "vitest run -c ./e2e/vitest.e2e.config.ts",
     "e2e:dev": "vitest -c ./e2e/vitest.e2e.config.ts",
     "e2e:u": "vitest run -u -c ./e2e/vitest.e2e.config.ts",
+    "e2e:update-snapshots": "node scripts/update-e2e-css-snapshots.mjs",
     "demo:build": "pnpm run build:demo && pnpm run build:apps",
     "demo:install": "tsx scripts/demo/install.ts",
     "demo:install:beta": "tsx scripts/demo/install.ts --beta",
@@ -123,7 +125,7 @@
     "@eslint/config-inspector": "^1.4.2",
     "@icebreakers/commitlint-config": "^1.2.3",
     "@icebreakers/eslint-config": "^1.6.6",
-    "@icebreakers/monorepo": "^3.1.5",
+    "@icebreakers/monorepo": "^3.1.8",
     "@icebreakers/stylelint-config": "^1.2.3",
     "@swc/core": "^1.15.3",
     "@tailwindcss/postcss": "catalog:tailwindcss4",
@@ -189,7 +191,7 @@
     "diff": "^8.0.2",
     "dlv": "^1.1.3",
     "domhandler": "^5.0.3",
-    "es-toolkit": "^1.42.0",
+    "es-toolkit": "^1.43.0",
     "esbuild": "^0.27.1",
     "eslint": "^9.39.1",
     "execa": "^9.6.1",
