chore(deps): commit bench

--- a/packages/postcss/package.json
+++ b/packages/postcss/package.json
@@ -42,6 +42,7 @@
     "dev": "tsup --watch --sourcemap",
     "build": "tsup",
     "test": "vitest run",
+    "bench": "vitest bench",
     "test:dev": "vitest",
     "release": "pnpm publish",
     "lint": "eslint .",
