--- a/website/package.json
+++ b/website/package.json
@@ -43,6 +43,7 @@
     "@weapp-tailwindcss/variants": "workspace:*",
     "clsx": "^2.1.1",
     "file-saver": "^2.0.5",
+    "pako": "^2.1.0",
     "prism-react-renderer": "^2.4.1",
     "react": "catalog:react19",
     "react-dom": "catalog:react19",
@@ -67,10 +68,11 @@
     "@tailwindcss/typography": "^0.5.19",
     "@types/file-saver": "^2.0.7",
     "@types/node": "catalog:typesNode2410",
+    "@types/pako": "^2.0.4",
     "@types/react": "catalog:react19",
     "@types/react-dom": "catalog:react19",
     "autoprefixer": "catalog:autoprefixer10",
-    "baseline-browser-mapping": "^2.9.6",
+    "baseline-browser-mapping": "^2.9.7",
     "cross-env": "catalog:crossEnv",
     "docusaurus-plugin-llms": "^0.2.2",
     "docusaurus-plugin-sass": "^0.2.6",
