--- a/packages-runtime/theme-transition/package.json
+++ b/packages-runtime/theme-transition/package.json
@@ -22,26 +22,8 @@
   ],
   "sideEffects": false,
   "exports": {
-    ".": {
-      "import": {
-        "types": "./dist/index.d.mts",
-        "default": "./dist/index.mjs"
-      },
-      "require": {
-        "types": "./dist/index.d.cts",
-        "default": "./dist/index.cjs"
-      }
-    },
-    "./tailwindcss": {
-      "import": {
-        "types": "./dist/tailwindcss.d.mts",
-        "default": "./dist/tailwindcss.mjs"
-      },
-      "require": {
-        "types": "./dist/tailwindcss.d.cts",
-        "default": "./dist/tailwindcss.cjs"
-      }
-    },
+    ".": "./src/index.ts",
+    "./tailwindcss": "./src/tailwindcss.ts",
     "./scss": "./scss/index.scss",
     "./scss/mixins": "./scss/mixins.scss",
     "./scss/*": "./scss/*",
