--- a/templates/taro-webpack-tailwindcss-v4/package.json
+++ b/templates/taro-webpack-tailwindcss-v4/package.json
@@ -45,21 +45,21 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.28.4",
-    "@tarojs/components": "4.1.8",
-    "@tarojs/helper": "4.1.8",
-    "@tarojs/plugin-framework-react": "4.1.8",
-    "@tarojs/plugin-platform-alipay": "4.1.8",
-    "@tarojs/plugin-platform-h5": "4.1.8",
-    "@tarojs/plugin-platform-harmony-hybrid": "4.1.8",
-    "@tarojs/plugin-platform-jd": "4.1.8",
-    "@tarojs/plugin-platform-qq": "4.1.8",
-    "@tarojs/plugin-platform-swan": "4.1.8",
-    "@tarojs/plugin-platform-tt": "4.1.8",
-    "@tarojs/plugin-platform-weapp": "4.1.8",
-    "@tarojs/react": "4.1.8",
-    "@tarojs/runtime": "4.1.8",
-    "@tarojs/shared": "4.1.8",
-    "@tarojs/taro": "4.1.8",
+    "@tarojs/components": "4.1.9",
+    "@tarojs/helper": "4.1.9",
+    "@tarojs/plugin-framework-react": "4.1.9",
+    "@tarojs/plugin-platform-alipay": "4.1.9",
+    "@tarojs/plugin-platform-h5": "4.1.9",
+    "@tarojs/plugin-platform-harmony-hybrid": "4.1.9",
+    "@tarojs/plugin-platform-jd": "4.1.9",
+    "@tarojs/plugin-platform-qq": "4.1.9",
+    "@tarojs/plugin-platform-swan": "4.1.9",
+    "@tarojs/plugin-platform-tt": "4.1.9",
+    "@tarojs/plugin-platform-weapp": "4.1.9",
+    "@tarojs/react": "4.1.9",
+    "@tarojs/runtime": "4.1.9",
+    "@tarojs/shared": "4.1.9",
+    "@tarojs/taro": "4.1.9",
     "@weapp-tailwindcss/merge": "^2.1.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
@@ -67,28 +67,28 @@
   "devDependencies": {
     "@babel/core": "^7.28.5",
     "@babel/preset-react": "^7.28.5",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.6.1",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.6.2",
     "@tailwindcss/postcss": "^4.1.18",
-    "@tarojs/cli": "4.1.8",
-    "@tarojs/taro-loader": "4.1.8",
-    "@tarojs/webpack5-runner": "4.1.8",
+    "@tarojs/cli": "4.1.9",
+    "@tarojs/taro-loader": "4.1.9",
+    "@tarojs/webpack5-runner": "4.1.9",
     "@types/node": "^18",
     "@types/react": "^18.0.0",
     "@types/webpack-env": "^1.13.6",
-    "babel-preset-taro": "4.1.8",
+    "babel-preset-taro": "4.1.9",
     "eslint": "^8.57.0",
-    "eslint-config-taro": "4.1.8",
+    "eslint-config-taro": "4.1.9",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
     "postcss": "^8.5.6",
     "react-refresh": "^0.18.0",
-    "stylelint": "^16.25.0",
+    "stylelint": "^16.26.1",
     "tailwindcss": "^4.1.18",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
     "typescript": "^5.9.3",
     "weapp-ide-cli": "^4.1.2",
-    "weapp-tailwindcss": "^4.8.15",
-    "webpack": "5.103.0"
+    "weapp-tailwindcss": "^4.9.0-alpha.0",
+    "webpack": "5.104.1"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
